<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HttpSocketAdaptor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_relay">Start Relay</string>
    <string name="stop_relay">Relay Running</string>
    <string name="relay_port">Relay Port</string>
    <string name="printer_port">Printer Port</string>
    <string name="printer_host">Printer IP</string>

</resources>
