<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.com.wallaceit.httpsocketadaptor.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/stattxt"
        android:text="@string/stop_relay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/serverbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_relay"/>

    <EditText
        android:id="@+id/sourceport"
        android:text="8080"
        android:hint="@string/relay_port"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/desthost"
        android:text="192.168.1.87"
        android:hint="@string/printer_host"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/destport"
        android:text="9100"
        android:hint="@string/printer_port"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
